fix z-index search page

--- a/compiled_staticfiles/css/all.css
+++ b/compiled_staticfiles/css/all.css
@@ -14999,7 +14999,7 @@ input, keygen, select, textarea {
     top: 0;
     width: 100%;
     padding: 0 10px;
-    z-index: 2;
+    /*z-index: 2;*/
     text-align: center
 }
 
